bootstrap/argo-cd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # Uncomment to enable TLS with cert-manager
    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Uncomment to enable basic-auth (requires secret)
    # traefik.ingress.kubernetes.io/router.middlewares: argocd-auth@kubernetescrd
spec:
  rules:
    - host: argocd.fle.api64.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  # Uncomment to enable TLS
  # tls:
  #   - hosts:
  #       - argocd.fle.api64.de
  #     secretName: argocd-tls
